	PR c++/27884 	* decl.c (have_extern_spec): Remove. 	(start_decl): Do not check have_extern_spec. 	(start_function): Likewise. 	* cp-tree.h (have_extern_spec): Remove. 	* parser.c (cp_parser_linkage_specification): Don't set 	have_extern_spec. 	(cp_parser_init_declarator): Likewise. 	(cp_parser_parameter_declaration): Do not treat parameters as 	within the scope of an unbraced linkage specification. 	PR c++/27884 	* g++.dg/parse/linkage2.C: New test

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114727 138bc75d-0d04-0410-961f-82ee72b054a4